@@ -1,3 +1,14 @@
+2014-10-14  peavo@outlook.com  <peavo@outlook.com>
+
+        [Win32] Thunk is not implemented.
+        https://bugs.webkit.org/show_bug.cgi?id=137691
+
+        Reviewed by Mark Lam.
+
+        Thunks for functions with double operands (floor, etc.) are not implemented on Win32.
+
+        * jit/ThunkGenerators.cpp:
+
 2014-10-12  Alexey Proskuryakov  <ap@apple.com>
 
         Adding svn:ignore so that .pyc files don't show up as new.
